[metadata]
name = powerbi_survey_charts
version = 1.0.0
author = David Fraser
description = Python visualisations for PowerBI of diverging stacked bar charts useful in showing Likert scale results
long_description = This repository contains matplotlib charting methods useful for PowerBI display of survey results

    This includes using diverging stacked bar charts to display results from surveys using the Likert scale
    The original sample code was taken from the matplotlib examples and modifications on StackOverflow by eitanlees
    See https://github.com/matplotlib/matplotlib/blob/main/examples/lines_bars_and_markers/horizontal_barchart_distribution.py
    and https://stackoverflow.com/a/69976552/120398

url = https://github.com/davidfraser/powerbi_survey_charts
keywords = charts, matplotlib, visualisation, powerbi
license_files = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Framework :: Matplotlib
    License :: OSI Approved :: Python Software Foundation License
    Topic :: Scientific/Engineering :: Visualization

[options]
python_requires = >=2.7, <4
install_requires =
    numpy
    matplotlib
